syntax = "proto3";
package com.example.internalapi.model;

option java_package = "com.example.internalapi.model";
option java_multiple_files = true;

message Author {
  optional string id = 1;
  string first_name = 2;
  string last_name = 3;
}

message AuthorList {
  repeated Author authors = 1;
}

